--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +9,55 @@
     <link rel="shortcut icon" href="assets/icon.png" type="image/x-icon">
     <title>JUÁ</title>
 </head>
+
 <body>
-    
+
     <main class="main">
         <div class="logo">
             <img width="150px" src="assets/logo-jua.png" alt="">
         </div>
         <p>Conheça um pouco sobre a nossa história e conecte-se com a gente!</p>
         <section class="links">
-            <div class="inicio"> <a href="https://www.ufpi.br/ultimas-noticias-ufpi/27199-picos-inaugurada-empresa-junior-do-curso-de-sistemas-de-informacao" target="_blank"> <img width="30px" src="assets/logo-antiga.png" alt=""> <p>Início da JUÁ</p></a></div>
-            <div class="linkedin"> <a href="https://www.linkedin.com/company/ju%C3%A1-tecnologia/mycompany/" target="_blank"> <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-original.svg" /> <p>LinkedIn</p> </a></div>
-            <div class="github"> <a href="https://github.com/Jua-Solucoes-em-Tecnologia" target="_blank"> <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" /> <p>Github</p> </a></div>
-            <div class="instagram"> <a href="https://www.instagram.com/juati.ufpi/" target="_blank"> <img width="30px" src="assets/instagram.png" alt=""> <p>Instagram</p> </a></div>
+            <div class="inicio">
+                <a href="https://www.ufpi.br/ultimas-noticias-ufpi/27199-picos-inaugurada-empresa-junior-do-curso-de-sistemas-de-informacao"
+                    target="_blank">
+                    <img width="30px" src="assets/logo-antiga.png" alt="">
+                    <p>Início da JUÁ</p>
+                </a>
+            </div>
+
+            <div class="linkedin">
+                <a href="https://www.linkedin.com/company/ju%C3%A1-tecnologia/mycompany/" target="_blank"> <img
+                        width="30px"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-original.svg" />
+                    <p>LinkedIn</p>
+                </a>
+            </div>
+            <div class="github"> <a href="https://github.com/Jua-Solucoes-em-Tecnologia" target="_blank"> <img
+                        width="30px"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+                    <p>Github</p>
+                </a></div>
+            <div class="instagram"> <a href="https://www.instagram.com/juati.ufpi/" target="_blank"> <img width="30px"
+                        src="assets/instagram.png" alt="">
+                    <p>Instagram</p>
+                </a>
+            </div>
+
+            <div class="processo_seletivo"> <a href="https://drive.google.com/file/d/1RFCQlRb726YSAKulYrjkYu1pXnKnjXL3/view?usp=sharing" target="_blank"> <img
+                        width="30px" src="assets/logo-jua.png" alt="">
+                    <p>Edital - Processo Seletivo</p>
+                </a>
+            </div>
+
+            <div class="processo_seletivo"> <a href="https://forms.gle/9qh7Am4zbvRo7sq49" target="_blank"> <img
+                        width="30px" src="assets/logo-jua.png" alt="">
+                    <p>Formulário de Cadastro</p>
+                </a>
+            </div>
         </section>
     </main>
 
 </body>
+
 </html>
