--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
                 </a>
             </div>
 
-            <div class="processo_seletivo"> <a href="https://drive.google.com/file/d/1RFCQlRb726YSAKulYrjkYu1pXnKnjXL3/view?usp=sharing" target="_blank"> <img
+<!--             <div class="processo_seletivo"> <a href="https://drive.google.com/file/d/1RFCQlRb726YSAKulYrjkYu1pXnKnjXL3/view?usp=sharing" target="_blank"> <img
                         width="30px" src="assets/logo-jua.png" alt="">
                     <p>Edital - Processo Seletivo</p>
                 </a>
-            </div>
+            </div> -->
 
-            <div class="processo_seletivo"> <a href="https://forms.gle/9qh7Am4zbvRo7sq49" target="_blank"> <img
+<!--             <div class="processo_seletivo"> <a href="https://forms.gle/9qh7Am4zbvRo7sq49" target="_blank"> <img
                         width="30px" src="assets/logo-jua.png" alt="">
                     <p>Formulário de Cadastro</p>
                 </a>
-            </div>
+            </div> -->
         </section>
     </main>
 
