--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="assets/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/Group_3_(1)[1].jpg" type="image/x-icon">
     <title>JUÁ</title>
 </head>
 
@@ -14,14 +14,14 @@
 
     <main class="main">
         <div class="logo">
-            <img width="150px" src="assets/logo-jua.png" alt="">
+            <img width="150px" src="assets/Group 5.jpg" alt="">
         </div>
         <p>Conheça um pouco sobre a nossa história e conecte-se com a gente!</p>
         <section class="links">
             <div class="inicio">
                 <a href="https://www.ufpi.br/ultimas-noticias-ufpi/27199-picos-inaugurada-empresa-junior-do-curso-de-sistemas-de-informacao"
                     target="_blank">
-                    <img width="30px" src="assets/logo-antiga.png" alt="">
+                    <img width="30px" src="assets/Group 5.jp" alt="">
                     <p>Início da JUÁ</p>
                 </a>
             </div>
